# PersonalWebsite

./: .eslintcache  .example.env  .gitignore  Dockerfile  README.md  build_files.sh  codegen.ts  components.json  db.sqlite3  next.config.js  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  schema.graphql  vercel.json
app/: constants.tsx  globals.css  layout.tsx  middleware.ts  page.tsx  urqlProvider.tsx
app/_components/: greeting.tsx  loader.tsx  pillar.tsx
app/_styles/: home_page.module.css  loader.module.css  pillar.module.css
app/_types/: generated.ts
app/about-me/: page.tsx
app/art/: page.tsx
app/components/: about_me_projects.tsx  about_me_roles.tsx  bullets.tsx  custom_breakpoints.tsx  graphql_error.tsx  greeting.tsx  loader.tsx  nav_desktop.tsx  nav_mobile.tsx  pillar.tsx  project.tsx  project_body.tsx  project_figma.tsx  project_git_repo.tsx  project_git_repo_style.tsx  project_hero.tsx  project_process.tsx  project_process_paragraph.tsx  title.tsx
app/graphql/: about_me_page.graphql  art_page.graphql  home_page.graphql  project_page.graphql  projects_page.graphql
app/projects/: page.tsx
app/styles/: about_me_page.module.css  about_me_projects.module.css  about_me_roles.module.css  art_page.module.css  bullets.module.css  greeting.module.css  home_page.module.css  pillar.module.css  project_page.module.css  project_page_body.module.css  project_page_figma.module.css  project_page_git_repo.module.css  project_page_hero.module.css  (+4 more)
scripts/: build.sh
src/: App.css  App.js  storages.py  urls.py  wsgi.py
(+65 files in other folders)
