[tool.poetry]
name = "Personal Website"
version = "0.1.0"
description = ""
authors = ["Szymon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
wagtail = "^5.2"
ariadne = "^0.21"
ariadne-django = "^0.3.0"
ruff = "^0.1.7"
wagtail-headless-preview = "^0.7.0"

[tool.ruff.lint]
select = [
    "E", 
    "F",
    "I"
]
ignore = ["F403", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
