[tool.poetry]
name = "Personal Website"
version = "0.1.0"
description = ""
authors = ["Szymon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
wagtail = "^5.2"
ariadne = "^0.21"
ariadne-django = "^0.3.0"
ruff = "^0.1.7"
wagtail-headless-preview = "^0.7.0"
django-cors-headers = "^4.3.1"
python-environ = "^0.4.54"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
django-storages = "^1.14.2"
boto3 = "^1.34.35"
wagtail-storages = "^1.0.0"

[tool.ruff.lint]
select = [
    "E", 
    "F",
    "I"
]
ignore = ["F403", "F405", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
